--- a/MyPropertyAnimation-starter/app/build.gradle
+++ b/MyPropertyAnimation-starter/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "com.raywenderlich.carlaunch"
+        applicationId "binar.academy.carlaunch"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
